Framework 16, Fedora 40, kernel 6.9.5 page allocation failure in kwin_wayland, pre_validate_dsc+0xe1/0x730 [amdgpu]
This happened with VirtualBox running a Windows VM in the background hogging a lot of memory. Seemed to be harmless and continued to work normally.
[73477.067948] kwin_wayland: page allocation failure: order:9, mode:0x40cc0(GFP_KERNEL|__GFP_COMP), nodemask=(null),cpuset=/,mems_allowed=0
[73477.067966] CPU: 2 PID: 5166 Comm: kwin_wayland Tainted: G W OE 6.9.5-200.fc40.x86_64 #1
[73477.067970] Hardware name: Framework Laptop 16 (AMD Ryzen 7040 Series)/FRANMZCP07, BIOS 03.03 03/27/2024
[73477.067972] Call Trace:
[73477.067976] <TASK>
[73477.067981] dump_stack_lvl+0x5d/0x80
[73477.067995] warn_alloc+0x164/0x190
[73477.068000] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.068007] ? __alloc_pages_direct_compact+0x1d9/0x220
[73477.068010] __alloc_pages_slowpath.constprop.0+0xcf2/0xe00
[73477.068015] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.068018] __alloc_pages+0x31f/0x350
[73477.068021] __kmalloc_large_node+0x67/0x100
[73477.068025] __kmalloc_node_track_caller+0x365/0x4b0
[73477.068032] ? pre_validate_dsc+0xe1/0x730 [amdgpu]
[73477.068614] ? kmemdup+0x20/0x50
[73477.068618] kmemdup+0x20/0x50
[73477.068622] pre_validate_dsc+0xe1/0x730 [amdgpu]
[73477.068802] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.068804] ? dm_update_plane_state+0x582/0x680 [amdgpu]
[73477.068971] amdgpu_dm_atomic_check+0x8f0/0x1570 [amdgpu]
[73477.069132] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069134] ? __ww_mutex_lock.constprop.0+0x5b/0x9a0
[73477.069137] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069139] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069141] ? amdgpu_dm_crtc_duplicate_state+0x68/0x190 [amdgpu]
[73477.069298] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069303] drm_atomic_check_only+0x633/0xae0
[73477.069308] drm_mode_atomic_ioctl+0x853/0xd20
[73477.069313] ? __pfx_drm_mode_atomic_ioctl+0x10/0x10
[73477.069315] drm_ioctl_kernel+0xb0/0x100
[73477.069318] drm_ioctl+0x28b/0x540
[73477.069321] ? __pfx_drm_mode_atomic_ioctl+0x10/0x10
[73477.069326] amdgpu_drm_ioctl+0x4e/0x90 [amdgpu]
[73477.069438] __x64_sys_ioctl+0x94/0xd0
[73477.069443] do_syscall_64+0x82/0x160
[73477.069447] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069449] ? __lruvec_stat_mod_folio+0x68/0xa0
[73477.069452] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069454] ? xas_find+0x6e/0x1b0
[73477.069458] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069460] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069462] ? next_uptodate_folio+0xa5/0x2e0
[73477.069465] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069467] ? filemap_map_pages+0x47e/0x550
[73477.069470] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069472] ? syscall_exit_to_user_mode+0x75/0x230
[73477.069476] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069478] ? do_fault+0x246/0x490
[73477.069482] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069483] ? __handle_mm_fault+0x867/0xe10
[73477.069486] ? do_syscall_64+0x8e/0x160
[73477.069487] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069491] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069492] ? __count_memcg_events+0x69/0x100
[73477.069494] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069496] ? count_memcg_events.constprop.0+0x1a/0x30
[73477.069498] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069500] ? handle_mm_fault+0x1f0/0x300
[73477.069503] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069505] ? do_user_addr_fault+0x34e/0x620
[73477.069508] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069510] ? srso_alias_return_thunk+0x5/0xfbef5
[73477.069512] entry_SYSCALL_64_after_hwframe+0x76/0x7e
[73477.069516] RIP: 0033:0x7f5a89726d5d
[73477.069562] Code: 04 25 28 00 00 00 48 89 45 c8 31 c0 48 8d 45 10 c7 45 b0 10 00 00 00 48 89 45 b8 48 8d 45 d0 48 89 45 c0 b8 10 00 00 00 0f 05 <89> c2 3d 00 f0 ff ff 77 1a 48 8b 45 c8 64 48 2b 04 25 28 00 00 00
[73477.069563] RSP: 002b:00007ffea92168c0 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
[73477.069567] RAX: ffffffffffffffda RBX: 00007ffea92169b0 RCX: 00007f5a89726d5d
[73477.069568] RDX: 00007ffea92169b0 RSI: 00000000c03864bc RDI: 0000000000000015
[73477.069570] RBP: 00007ffea9216910 R08: 000055b369507f08 R09: 0000000000000007
[73477.069571] R10: 000055b369507e90 R11: 0000000000000246 R12: 000055b369507f08
[73477.069572] R13: 0000000000000015 R14: 000055b368610550 R15: 0000000000000004
[73477.069576] </TASK>
[73477.069586] Mem-Info:
[73477.069590] active_anon:3942512 inactive_anon:3242721 isolated_anon:0
active_file:363125 inactive_file:1665545 isolated_file:0
unevictable:1444 dirty:6027 writeback:0
slab_reclaimable:247689 slab_unreclaimable:238255
mapped:4737904 shmem:410049 pagetables:79602
sec_pagetables:0 bounce:0
kernel_misc_reclaimable:0
free:220862 free_pcp:505 free_cma:0
[73477.069595] Node 0 active_anon:15770048kB inactive_anon:12970884kB active_file:1452500kB inactive_file:6662180kB unevictable:5776kB isolated(anon):0kB isolated(file):0kB mapped:18951616kB dirty:24108kB writeback:0kB shmem:1640196kB shmem_thp:0kB shmem_pmdmapped:0kB anon_thp:0kB writeback_tmp:0kB kernel_stack:83088kB pagetables:318408kB sec_pagetables:0kB all_unreclaimable? no
[73477.069599] Node 0 DMA free:11264kB boost:0kB min:16kB low:28kB high:40kB reserved_highatomic:0KB active_anon:0kB inactive_anon:0kB active_file:0kB inactive_file:0kB unevictable:0kB writepending:0kB present:15992kB managed:15360kB mlocked:0kB bounce:0kB free_pcp:0kB local_pcp:0kB free_cma:0kB
[73477.069603] lowmem_reserve[]: 0 1218 59972 59972 59972
[73477.069606] Node 0 DMA32 free:236420kB boost:0kB min:1372kB low:2616kB high:3860kB reserved_highatomic:0KB active_anon:272372kB inactive_anon:171464kB active_file:1144kB inactive_file:1876kB unevictable:0kB writepending:0kB present:1386748kB managed:1320828kB mlocked:0kB bounce:0kB free_pcp:0kB local_pcp:0kB free_cma:0kB
[73477.069610] lowmem_reserve[]: 0 0 58754 58754 58754
[73477.069614] Node 0 Normal free:635764kB boost:0kB min:66192kB low:126356kB high:186520kB reserved_highatomic:2048KB active_anon:15497676kB inactive_anon:12799420kB active_file:1451356kB inactive_file:6661076kB unevictable:5776kB writepending:24108kB present:61312000kB managed:60172224kB mlocked:5776kB bounce:0kB free_pcp:2144kB local_pcp:0kB free_cma:0kB
[73477.069618] lowmem_reserve[]: 0 0 0 0 0
[73477.069621] Node 0 DMA: 0*4kB 0*8kB 0*16kB 0*32kB 0*64kB 0*128kB 0*256kB 0*512kB 1*1024kB (U) 1*2048kB (M) 2*4096kB (M) = 11264kB
[73477.069632] Node 0 DMA32: 3811*4kB (UME) 2685*8kB (UME) 1519*16kB (UME) 753*32kB (UME) 384*64kB (UME) 180*128kB (UME) 65*256kB (UME) 24*512kB (UME) 19*1024kB (UME) 5*2048kB (UME) 11*4096kB (UM) = 236420kB
[73477.069645] Node 0 Normal: 31249*4kB (UME) 15112*8kB (UMEH) 8793*16kB (UME) 3708*32kB (UME) 899*64kB (UME) 319*128kB (UM) 80*256kB (M) 13*512kB (M) 6*1024kB (M) 0*2048kB 0*4096kB = 636884kB
[73477.069658] Node 0 hugepages_total=0 hugepages_free=0 hugepages_surp=0 hugepages_size=1048576kB
[73477.069660] Node 0 hugepages_total=0 hugepages_free=0 hugepages_surp=0 hugepages_size=2048kB
[73477.069661] 2442017 total pagecache pages
[73477.069663] 1719 pages in swap cache
[73477.069664] Free swap = 73158392kB
[73477.069665] Total swap = 75497464kB
[73477.069666] 15678685 pages RAM
[73477.069667] 0 pages HighMem/MovableOnly
[73477.069668] 301582 pages reserved
[73477.069669] 0 pages cma reserved
[73477.069670] 0 pages hwpoisoned